packages/fortifier-macros/tests/validations/email/invalid_minimum_sub_domains_fail.stderr
error: invalid digit found in string
 --> tests/validations/email/invalid_minimum_sub_domains_fail.rs:5:44
  |
5 |     #[validate(email(minimum_sub_domains = -1))]
  |                                            ^
